--- a/GZipTest/GZipTestUnitTest/GZipTestUnitTest.csproj
+++ b/GZipTest/GZipTestUnitTest/GZipTestUnitTest.csproj
@@ -54,6 +54,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="IntegrationTests\CompressorIntegrationTests.cs" />
+    <Compile Include="PerformanceTests\PerformanceTests.cs" />
     <Compile Include="UnitTests\CompressorUnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTests\FileSplitterUnitTests.cs" />
