--- a/GZipTest/GZipTest/GZipTest.csproj
+++ b/GZipTest/GZipTest/GZipTest.csproj
@@ -44,11 +44,13 @@
   <ItemGroup>
     <Compile Include="Enums\CompressOperations.cs" />
     <Compile Include="Globals\Const.cs" />
+    <Compile Include="Interfaces\ICompressMultithread.cs" />
     <Compile Include="Interfaces\ICompressor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tools\Compressor.cs" />
-    <Compile Include="Tools\CompressorThreadPool.cs" />
+    <Compile Include="Tools\Compressors\Compressor.cs" />
+    <Compile Include="Tools\Compressors\CompressorMultithread.cs" />
+    <Compile Include="Tools\Compressors\ThreadPoolCompression.cs" />
     <Compile Include="Tools\FileManipulator.cs" />
     <Compile Include="Tools\PathCorrector.cs" />
     <Compile Include="Tools\Validator.cs" />
