--- a/GZipTest/GZipTest/GZipTest.csproj
+++ b/GZipTest/GZipTest/GZipTest.csproj
@@ -49,7 +49,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools\Compressors\Compressor.cs" />
-    <Compile Include="Tools\Compressors\CompressorMultithread.cs" />
+    <Compile Include="Tools\Compressors\CompressorMultiThread.cs" />
     <Compile Include="Tools\Compressors\ThreadPoolCompression.cs" />
     <Compile Include="Tools\FileManipulator.cs" />
     <Compile Include="Tools\PathCorrector.cs" />
