--- a/GZipTest/GZipTest/GZipTest.csproj
+++ b/GZipTest/GZipTest/GZipTest.csproj
@@ -44,13 +44,16 @@
   <ItemGroup>
     <Compile Include="Enums\CompressOperations.cs" />
     <Compile Include="Globals\Const.cs" />
-    <Compile Include="Interfaces\ICompressMultithread.cs" />
+    <Compile Include="Interfaces\ICompressorMultiThread.cs" />
     <Compile Include="Interfaces\ICompressor.cs" />
+    <Compile Include="Interfaces\IThreadPoolCompressor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools\Compressors\Compressor.cs" />
     <Compile Include="Tools\Compressors\CompressorMultiThread.cs" />
-    <Compile Include="Tools\Compressors\ThreadPoolCompression.cs" />
+    <Compile Include="Tools\Compressors\CompressorMultiThreadHighMemory.cs" />
+    <Compile Include="Tools\Compressors\CompressorMultiThreadLowMemory.cs" />
+    <Compile Include="Tools\Compressors\ThreadPoolCompressor.cs" />
     <Compile Include="Tools\ConcurrentBuffer.cs" />
     <Compile Include="Tools\FileManipulator.cs" />
     <Compile Include="Tools\PathCorrector.cs" />
